# C-project

./: CMakeLists.txt  README.md  UI.cpp  main.cpp
Domain/: Cheltuiala.cpp  Cheltuiala.h
Repository/: Repo.cpp  Repo.h  Undorepo.cpp  Undorepo.h
Service/: Service.cpp  Service.h
Tests/: Tests.cpp  Tests.h
UI/: UI.h
